# tsa-project-23-24

./: .gitignore  README.md  TODO.md  pyproject.toml
data/: global-semiconductor-sales-2012-2024.csv  smh-2000-06-05_2024-08-23.csv  smh-2024-07-31.csv
notebooks/: draft-notebook-1.py  test-notebook-dirty-data.py  test-notebook.py
notebooks/price-prediction/: eda.py  model-comparison.py
notebooks/sales-price-tf-modelling/: eda.py  lagged-regression.py  pre-whitening.py
src/: data.py  diagnostics.py  eda.py  models.py  transfer_function_modelling.py  visualization.py
